# ETL-for-Daily-Crime-Data

./: README.md  pyproject.toml
src/etl_crime_data/: crew.py  main.py
src/etl_crime_data/config/: agents.yaml  tasks.yaml
src/etl_crime_data/tools/: custom_tool.py
