[project]
name = "etl_crime_data"
version = "0.1.0"
description = "ETL_Crime_data using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
etl_crime_data = "etl_crime_data.main:run"
run_crew = "etl_crime_data.main:run"
train = "etl_crime_data.main:train"
replay = "etl_crime_data.main:replay"
test = "etl_crime_data.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
